Multi-object edit UV not transform all meshes #70729

Closed
opened 2019-10-11 11:49:41 +02:00 by Alberto Velázquez · 4 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13571 Core Profile Context 19.9.2 26.20.13003.1007

Blender Version
Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-07 20:16, hash: a856c5eccf
Worked: (optional)

Short description of error
When edit multiples meshes at same time, sometimes in the UV editor the actions only affect at part of the tool.

2019-10-11 11-36-48.mp4

Exact steps for others to reproduce the error
Open file, enter edit mode without to change selected objects and try to move in the UV view the mesh.

TNMT_07.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13571 Core Profile Context 19.9.2 26.20.13003.1007 **Blender Version** Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-07 20:16, hash: `a856c5eccf` Worked: (optional) **Short description of error** When edit multiples meshes at same time, sometimes in the UV editor the actions only affect at part of the tool. [2019-10-11 11-36-48.mp4](https://archive.blender.org/developer/F7805488/2019-10-11_11-36-48.mp4) **Exact steps for others to reproduce the error** Open file, enter edit mode without to change selected objects and try to move in the UV view the mesh. [TNMT_07.blend](https://archive.blender.org/developer/F7805482/TNMT_07.blend)

Added subscriber: @AlbertoVelazquez

Added subscriber: @AlbertoVelazquez
Germano Cavalcante self-assigned this 2019-10-11 19:06:39 +02:00

This issue was referenced by 4e3f186a8c

This issue was referenced by 4e3f186a8c9e9c29a87fec4117cb4e7a99948492

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by f185cc0ca5

This issue was referenced by f185cc0ca55c8c817903d53bf5c107f3efd4e0db
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70729
No description provided.