Fix T70729: Multi-object edit UV not transform all meshes

Detail that went unnoticed in rBbfc9d426bb95